syntax = "proto3";

option java_multiple_files = true;
option java_package = "S02Seat_Water"; //A new package created for this service
option java_outer_classname = "Serv02Seat_Water"; //This name will be used in the new generated documents

package artifact_cinema;


service S02SeatWater {
  // this rpc is based on server streaming, asking the user if wants to use the Immersive water feature
  rpc ActivateWaterImmersiveFeature (ActivateRequest) returns (stream ActivateResponse);
}
//The user has to input a string yes - no 
message ActivateRequest {
    string on = 1;
  
}

message ActivateResponse { //Here the user will be informed about the change
  string message = 1;
}